# rsig

./: .gitignore  CMakeLists.txt  CMakePresets.json  Changelog.md  LICENSE  LICENSE.txt  README.md  rsig.sln  signal_test.cpp  vcpkg.json
.github/workflows/: cmake.yml  msbuild.yml
rsig/: rsig.h  rsig.vcxproj  rsig.vcxproj.filters
rsig-test/: main.cpp  rsig-test.vcxproj  rsig-test.vcxproj.filters  signal_test.cpp  slot_test.cpp  utils_test.cpp
